--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Two-Sided Notes",
     "short_name": "Notes",
-    "start_url": ".",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#121212",
     "theme_color": "#121212",
@@ -17,4 +17,5 @@
             "type": "image/png"
         }
     ]
+
 }
