--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "Two-Sided Notes",
     "short_name": "Notes",
     "start_url": "/index.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#121212",
     "theme_color": "#121212",
@@ -19,3 +20,4 @@
     ]
 
 }
+
