--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Two-Sided Notes",
     "short_name": "Notes",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "scope": "./",
     "display": "standalone",
     "background_color": "#121212",
@@ -20,4 +20,5 @@
     ]
 
 }
+
 
