--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Two-Sided Notes",
     "short_name": "Notes",
-    "start_url": "./index.html",
-    "scope": "./",
+    "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#121212",
     "theme_color": "#121212",
@@ -20,5 +20,6 @@
     ]
 
 }
+
 
 
